# DragonslayerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SaveProject.bat
DragonslayerEngine/: CMakeLists.txt
DragonslayerEngine/assets/textures/irradiance/: cubeMap0.fa  cubeMap1.fa  cubeMap2.fa  cubeMap4.fa  cubeMap5.fa  face1.fa  face2.fa  face3.fa  face4.fa  face5.fa  prefilterMip0face0.fa  prefilterMip0face1.fa  prefilterMip0face2.fa  prefilterMip0face3.fa  prefilterMip0face4.fa  prefilterMip0face5.fa  prefilterMip1face3.fa  prefilterMip1face4.fa  prefilterMip2face1.fa  prefilterMip2face2.fa  prefilterMip2face3.fa  prefilterMip2face4.fa  prefilterMip3face0.fa  prefilterMip3face1.fa  prefilterMip3face4.fa  prefilterMip3face5.fa  prefilterMip4face1.fa  prefilterMip4face3.fa  prefilterMip4face4.fa  prefilterMip4face5.fa
DragonslayerEngine/include/DragonslayerEngine/: AreaLight.h  Camera.h  DirectionalLight.h  Lights.h  Material.h  Mesh.h  MeshGroup.h  MeshLoader.h  OpenGLState.h  PointLight.h  PostProcessingCommand.h  RenderCommand.h  RenderQueue.h  RenderTarget.h  Renderer.h  RenderingConfigurations.h  Sky.h  SkyBox.h  SpotLight.h  Texture2D.h
DragonslayerEngine/include/DragonslayerEngine/shaders/: Shader.h  ShaderProgram.h
DragonslayerEngine/include/DragonslayerEngine/textures/: CubeMap.h  FloatArrayFile.h  FrameBuffer.h  IBL.h  ITexture.h
DragonslayerEngine/include/DragonslayerEngine/utils/: OpenGLUtils.h
DragonslayerEngine/libs/glad/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
DragonslayerEngine/libs/glad/include/glad/: glad.h
DragonslayerEngine/libs/glad/src/: glad.c
DragonslayerEngine/libs/lmath/: CMakeLists.txt
DragonslayerEngine/libs/lmath/include/LMath/: Mat2.hpp  Mat3.hpp  Mat4.hpp  MathAux.hpp  Qtrn.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
DragonslayerEngine/libs/lmath/src/: Mat2.cpp  Mat3.cpp  Mat4.cpp  MathAux.cpp  Qtrn.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
DragonslayerEngine/src/: GLObject.cpp  Material.cpp  OpenGLState.cpp  PostProcessingCommand.cpp  RenderCommand.cpp  RenderQueue.cpp  RenderTarget.cpp  Renderer.cpp  RenderingConfigurations.cpp
DragonslayerEngine/src/meshes/: Mesh.cpp  MeshGroup.cpp  MeshLoader.cpp  SkyBox.cpp
DragonslayerEngine/src/shaders/: Shader.cpp  ShaderProgram.cpp
DragonslayerEngine/src/shaders/deferred/: acesToneMappingFS.glsl  brdfVS.glsl  depthFS.glsl  geometryFS.glsl  geometryVS.glsl  pbrFS.glsl  prefilterFS.glsl  prefilterVS.glsl  reinhardToneMappingFS.glsl  ssaoBlurFS.glsl  ssaoFS.glsl
DragonslayerEngine/src/shaders/skybox/: skyboxVS.glsl
DragonslayerEngine/src/textures/: CubeMap.cpp  FrameBuffer.cpp  Texture2D.cpp
DragonslayerEngine/src/utils/: OpenGLUtils.cpp
DragonslayerEngine/src/view/: Camera.cpp  Transformations.cpp  Transformations.h
DragonslayerEngineExample/: CMakeLists.txt  CmakeLists.txt  CrossHatchingPostProcessing.cpp  CrossHatchingPostProcessing.h  Main.cpp
DragonslayerEngineExample/cameras/: EditorCamera.cpp  EditorCamera.h
DragonslayerEngineExample/core/: Input.cpp  Input.h
DragonslayerEngineExample/shaders/: crossHatchingFS.glsl
Engine/: Engine.sln
Engine/Dependencies/assimp-5.0.1/lib/: IrrXML.lib  assimp-vc142-mt.exp  zlib.exp  zlibstatic.lib
Engine/Engine/: Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
Engine/Engine/objs/: axe.fbx  cerberus.mtl  sphere.fbx
Engine/Engine/shaders/: fragmentShaderLighting.glsl  fragmentShaderNM.glsl  fragmentShaderSM.glsl  fragmentShaderShadows.glsl  lineFragmentShader.glsl  lineVertexShader.glsl  simpleFragmentShader.glsl  simpleVertexShader.glsl  textFragmentShader.glsl  textVertexShader.glsl  uiFragmentShader.glsl  uiVertexShader.glsl  vertexShaderNM.glsl  vertexShaderSM.glsl
Engine/Engine/shaders/blinnPhong/: blinnPhongFS.glsl
Engine/Engine/shaders/cylinder/: cylinderFragmentShader.glsl  cylinderGeometryShader.geom  cylinderGeometryShaderSM.geom  (+1 more)
Engine/Engine/src/: Configurations.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Main.cpp
Engine/WarriorRenderer/: WarriorRenderer.vcxproj  WarriorRenderer.vcxproj.filters
Engine/WarriorRenderer/src/: AreaLight.h  DirectionalLight.h  GLObject.cpp  Lights.h  Material.cpp  Material.h  OpenGLState.cpp  OpenGLState.h  PointLight.h  PostProcessingCommand.cpp  PostProcessingCommand.h  RenderCommand.h  RenderQueue.cpp  RenderQueue.h  RenderTarget.h  RenderingConfigurations.cpp  RenderingConfigurations.h  WarriorRenderer.cpp  WarriorRenderer.h
(+266 files in other folders)
